@@ -6,6 +6,8 @@
  * 	- vips_image_write() didn't ref non-partial sources
  * 18/4/15
  * 	- add vips_image_copy_memory()
+ * 25/11/15
+ * 	- add vips_image_new_from_memory_copy()
  */
 
 /*
@@ -1979,9 +1981,15 @@ vips_image_new_from_file_raw( const char *filename,
  * responsibility for the area of memory, it's up to you to make sure it's
  * freed when the image is closed. See for example #VipsObject::close.
  *
+ * Because VIPS is "borrowing" @data from the caller, this function is
+ * extremely dangerous. Unless you are very careful, you will get crashes or
+ * memory corruption. Use vips_image_new_from_memory_copy() instead if you are
+ * at all unsure. 
+ *
  * Use vips_copy() to set other image properties. 
  *
- * See also: vips_image_new(), vips_image_write_to_memory().
+ * See also: vips_image_new(), vips_image_write_to_memory(),
+ * vips_image_new_from_memory_copy().
  *
  * Returns: (transfer full): the new #VipsImage, or %NULL on error.
  */
@@ -2014,12 +2022,60 @@ vips_image_new_from_memory( const void *data, size_t size,
 	if( size > 0 && 
 		size < VIPS_IMAGE_SIZEOF_IMAGE( image ) ) {
 		vips_error( "VipsImage",
-			_( "buffer too small --- "
+			_( "memory area too small --- "
 				"should be %zd bytes, you passed %zd" ),
 			VIPS_IMAGE_SIZEOF_IMAGE( image ), size ); 
 		VIPS_UNREF( image );
 		return( NULL );
 	}
+
+	return( image );
+}
+
+static void
+vips_image_new_from_memory_copy_cb( VipsImage *image, void *data_copy )
+{
+	vips_tracked_free( data_copy );
+}
+
+/**
+ * vips_image_new_from_memory_copy:
+ * @data: (array length=size) (element-type guint8) (transfer none): start of memory area
+ * @size: length of memory area
+ * @width: image width
+ * @height: image height
+ * @bands: image bands (or bytes per pixel)
+ * @format: image format
+ *
+ * Like vips_image_new_from_memory(), but VIPS will make a copy of the memory 
+ * area. This
+ * means more memory use and an extra copy operation, but is much simpler and
+ * safer. 
+ *
+ * See also: vips_image_new_from_memory().
+ *
+ * Returns: (transfer full): the new #VipsImage, or %NULL on error.
+ */
+VipsImage *
+vips_image_new_from_memory_copy( const void *data, size_t size,
+	int width, int height, int bands, VipsBandFormat format )
+{
+	void *data_copy;
+	VipsImage *image;
+
+	vips_check_init();
+
+	if( !(data_copy = vips_tracked_malloc( size )) )
+		return( NULL );
+	memcpy( data_copy, data, size );
+	if( !(image = vips_image_new_from_memory( data_copy, size, 
+		width, height, bands, format )) ) {
+		vips_tracked_free( data_copy );
+		return( NULL );
+	}
+
+	g_signal_connect( image, "close", 
+		G_CALLBACK( vips_image_new_from_memory_copy_cb ), data_copy );
 
 	return( image );
 }
